--- a/public/create.html
+++ b/public/create.html
@@ -14,7 +14,7 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script><!-- load jquery -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script><!-- load angular -->
-    <script src="javascripts/create.js"></script>
+    <script src="/javascripts/create.js"></script>
 
 </head>
 <body ng-controller="mainController as controller">
